--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="text-center text-sm text-white">
     Challenge by <a class="color-a" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a class="color-a" href="#" target="_blank">Victoria Azola</a>.
+    Coded by <a class="color-a" href="https://github.com/VickyAzola/CardArticle" target="_blank">Victoria Azola</a>.
   </div>
 </body>
 </html>
