--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
 </head>
 <body>
-  <main class="flex justify-center items-center mb-36">
-    <div class="colorCard w-64 md:w-full md:h-72 my-10 md:mt-40 mx-auto md:max-w-3xl max-w-md rounded-md shadow-md overflow-hidden md:grid md:grid-cols-2 shadow-lg">
+  <main class="flex justify-center items-center md:mb-20">
+    <div class="colorCard w-64 md:w-full md:h-96 my-8 md:mt-40 mx-auto md:max-w-5xl max-w-md rounded-md shadow-md overflow-hidden md:grid md:grid-cols-2 shadow-lg">
     <section class="md:shrink-0 mb-2 md:order-last"> <!--order-last pone la imagen a la derecha-->
       <div class="colorImg rounded-xl">
-        <img class="md:h-72 opacity-50" src="images/image-header-mobile.jpg" alt="Imagen de gente en la oficina">
+        <img class="md:h-96 opacity-50" src="images/image-header-mobile.jpg" alt="Imagen de gente en la oficina">
       </div>
     </section>
 
-    <section class="py-6 px-5 md:py-10 md:pl-10 md:pr-16 pb-8 text-xl text-white text-center md:text-left">
-      <h1 class="font-bold pb-3">Get <span>insights</span> that help your business grow.</h1>
-      <p class="text-xs leading-5 pb-4">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+    <section class="py-8 px-5 md:py-16 md:pl-16 md:pr-32 pb-8 text-xl text-white text-center md:text-left">
+      <h1 class="font-bold lg:text-3xl md:pb-6 pb-3">Get <span>insights</span> that help your business grow.</h1>
+      <p class="lg:text-sm text-xs leading-5 pb-4">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
-      <div class="md:flex md:pt-4">
+      <div class="md:flex lg:items-baseline md:justify-between lg:pt-10 md:pt-4">
         <div class="pb-4 md:pr-4">
           <h2 class="text-white font-semibold text-xl py-1">10k+</h2>
           <p class="text-xs">COMPANIES</p>
@@ -47,9 +47,9 @@
   </main>
 
 
-  <div class="text-center text-sm text-white">
+  <footer class="text-center text-xs text-white">
     Challenge by <a class="color-a" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a class="color-a" href="https://github.com/VickyAzola/CardArticle" target="_blank">Victoria Azola</a>.
-  </div>
+  </footer>
 </body>
 </html>
