--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 </head>
 <body>
-  <main class="flex justify-center items-center md:mb-20">
-    <div class="colorCard w-64 md:w-full md:h-96 my-8 md:mt-40 mx-auto md:max-w-5xl max-w-md rounded-md shadow-md overflow-hidden md:grid md:grid-cols-2 shadow-lg">
+  <main>
+    <div class="colorCard w-64 md:w-full md:h-96 my-4 mx-auto md:mt-20 md:max-w-5xl max-w-md rounded-md shadow-md overflow-hidden md:grid md:grid-cols-2 shadow-lg">
     <section class="md:shrink-0 mb-2 md:order-last"> <!--order-last pone la imagen a la derecha-->
       <div class="colorImg rounded-xl">
         <img class="md:h-96 opacity-50" src="images/image-header-mobile.jpg" alt="Imagen de gente en la oficina">
