--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <main>
     <div class="colorCard w-64 md:w-full md:h-96 my-4 mx-auto md:mt-20 md:max-w-5xl max-w-md rounded-md shadow-md overflow-hidden md:grid md:grid-cols-2 shadow-lg">
     <section class="md:shrink-0 mb-2 md:order-last"> <!--order-last pone la imagen a la derecha-->
-      <div class="colorImg rounded-xl">
-        <img class="md:h-96 opacity-50" src="images/image-header-mobile.jpg" alt="Imagen de gente en la oficina">
-      </div>
+      <figure>
+        <img class="md:h-96 colorImg" src="images/image-header-mobile.jpg" alt="Imagen de gente en la oficina">
+      </figure>
     </section>
 
     <section class="py-8 px-5 md:py-16 md:pl-16 md:pr-32 pb-8 text-xl text-white text-center md:text-left">
